# android-ephemeris

./: .gitignore  PRIVACY_POLICY.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/skothr/ephemeris/ephemeris/: SwissEphemerisTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  swisseph_wrapper.c
app/src/main/java/com/skothr/ephemeris/: EphemerisApp.kt  MainActivity.kt
app/src/main/java/com/skothr/ephemeris/chart/: AspectCalculator.kt  ChartCalculator.kt
app/src/main/java/com/skothr/ephemeris/chart/config/: AspectConfig.kt  BodyConfig.kt
app/src/main/java/com/skothr/ephemeris/chart/models/: Aspect.kt  AspectResult.kt  CelestialBody.kt  (+3 more)
app/src/main/java/com/skothr/ephemeris/ephemeris/: EphemerisProvider.kt  SwissEphemeris.kt
app/src/main/java/com/skothr/ephemeris/settings/: SettingsRepository.kt  SettingsScreen.kt
app/src/main/java/com/skothr/ephemeris/ui/: ChartViewModel.kt  MainScreen.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/skothr/ephemeris/chart/: AspectCalculatorTest.kt  ChartCalculatorTest.kt
docs/: icon-preview.html
docs/superpowers/plans/: 2026-03-20-android-ephemeris.md  2026-03-30-aspect-width-by-orb.md  2026-03-30-settings-screen.md  2026-03-31-app-icon.md
docs/superpowers/specs/: 2026-03-20-android-ephemeris-design.md  2026-03-30-aspect-width-by-orb-design.md  2026-03-30-settings-screen-design.md  2026-03-30-swisseph-flags-design.md  2026-03-31-app-icon-design.md
(+24 files in other folders)
